--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,12 @@ body, html{
 }
 body{
   margin: 0px;
-  background-color:#444;
+  background-image: url(img/battlefield.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   font-size: 18px;
-}
+} 
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
@@ -24,4 +27,8 @@ body, a:link, a:visited, a:active{
   border:10px solid red;
   border-radius:10px;
   position:absolute;
+}
+
+.kirby{
+  background-image: url(img/Kirby.png);
 }
